<resources>
    <string name="accept">Accept</string>
    <string name="accept_alt">Accept (%d)</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_import">Import</string>
    <string name="action_load">Load %1$s</string>
    <string name="action_new">New Profile</string>
    <string name="action_quick">Actions</string>
    <string name="action_save">Save</string>
    <string name="action_save_reload">Save &amp; Reload</string>
    <string name="action_save_only">Save only</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_turn_off">Turn Off</string>
    <string name="action_turn_off_alt">Turn Off %1$s</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="am_restart_warning">This method is not recommended when mirroring to wireless displays</string>
    <string name="any_profile">Any profile</string>
    <string name="app_name">SecondScreen</string>
    <string name="app_name_debug">SecondScreen (Debug)</string>
    <string name="available_actions">Available Actions</string>
    <string name="blacklisted">To protect your device, SecondScreen will not allow you to use this resolution and/or density value.</string>
    <string name="both_versions_installed">Multiple versions of SecondScreen are installed on your device. Only one version may be installed at a time.\n\nPress Uninstall to remove the duplicate version, then reload the app.</string>
    <string name="check_for_update">Check For Updates</string>
    <string name="checking_for_superuser">Checking for superuser access&#8230; please wait.</string>
    <string name="decline">Decline</string>
    <string name="deleting_current_profile">Cannot delete the currently active profile</string>
    <string name="dialog_about_message">SecondScreen: better screen mirroring for Android devices\n\n&#169; 2019 Braden Farmer\nApp logo by mayowadavid</string>
    <string name="dialog_about_title">About SecondScreen</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_delete_button_title">Delete profile</string>
    <string name="dialog_first_load">&#8226; Connect your display first, if you have not already done so.\n\n&#8226; Make sure you\'ve granted root/adb access to SecondScreen - otherwise, it won\'t do anything.\n\n&#8226; Hang tight for a few seconds as your device changes its resolution and density!\n\n&#8226; When the SecondScreen icon appears in the status bar, your device is ready to use.\n\n&#8226; For best results, connect any Bluetooth devices after the profile is finished loading.\n\n&#8226; When you\'re finished using your display, select the Turn Off option in the notification.</string>
    <string name="dialog_load_profile">Instructions</string>
    <string name="dialog_reload_profile_title">Reload profile?</string>
    <string name="dialog_turn_off_message">%1$s is currently active. Would you like to turn it off?</string>
    <string name="dialog_turn_off_title">Turn profile off</string>
    <string name="dialog_ui_refresh">You\'ve left your UI refresh method as \"Do nothing\".  Selecting a UI refresh method is highly recommended when changing your resolution and/or density.\n\nSave anyway?</string>
    <string name="dialog_upgrade_message">SecondScreen has not been tested on this version of Android. It may stop working completely or behave in other unexpected ways.\n\nCheck for app updates if you see any issues.</string>
    <string name="display_disconnected">Display disconnected</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="editing_current_profile">This is the currently active profile. Would you like to reload it to apply your changes?</string>
    <string name="enter_profile_name">Enter profile name</string>
    <string name="error_loading_list">Error loading list of profiles!</string>
    <string name="error_loading_profile">Error loading profile!</string>
    <string name="expert_mode">Expert mode</string>
    <string name="expert_mode_dialog">Expert mode overrides SecondScreen\'s internal blacklist of unsafe resolution and density combinations. Only use this option if you know exactly what you are doing. Safe mode is strongly recommended when using this option.\n\nReally enable expert mode?</string>
    <string name="expert_mode_summary">Allow any user-defined value to be set for resolution and density</string>
    <string name="failed_to_save">Error: Failed to save profile!</string>
    <string name="first_run">This app requires elevated permissions to operate! As with all apps of this nature, improper use may potentially render your device unusable.\n\nThis app is intended for devices with AOSP or Google experience ROMs only! It is not guaranteed to function properly on devices with manufacturer-skinned ROMs.\n\nBy pressing Accept, you acknowledge that you are SOLELY held responsible for how you use this app, for the type of device you use it on, and for the methods of obtaining elevated permissions on your device.</string>
    <string name="hdmi_checkbox">Start SecondScreen when connecting a display</string>
    <string name="hdmi_connected">Display connected</string>
    <string name="label_load_profile">Load Profile</string>
    <string name="label_profile_active">Profile Active</string>
    <string name="label_quick_actions">Quick Actions</string>
    <string name="loading_profile">Loading SecondScreen&#8230;</string>
    <string name="notification">SecondScreen is active</string>
    <string name="notification_settings">Notification settings</string>
    <string name="new_device_message">SecondScreen appears to have been restored from a backup.\n\nIf this is a different device, please clear app data and re-run SecondScreen to ensure that it operates correctly (otherwise, problems may occur).</string>
    <string name="no_profiles_found">No profiles found</string>
    <string name="no_superuser">Unable to obtain superuser permissions!</string>
    <string name="pref_description_safe_mode">Profiles will not stay active after a reboot</string>
    <string name="pref_title_hdmi">Auto-start</string>
    <string name="pref_title_hdmi_select_profile">Auto-start action</string>
    <string name="pref_title_hide_notification">Hide notification icon</string>
    <string name="pref_title_notification_action">Secondary action button</string>
    <string name="pref_title_safe_mode">Safe mode (recommended)</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="profile_saved">Profile saved</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="profile_helper_text">Tap a profile name to view or load its settings.\nCreate additional profiles using the plus button.</string>
    <string name="profile_helper_text_alt">The highlighted profile below is currently active.\nTap its name to view its settings or turn it off.</string>
    <string name="profile_view_bluetooth_on">Bluetooth on</string>
    <string name="profile_view_daydreams_on">Daydreams on</string>
    <string name="profile_view_navbar">Force navbar</string>
    <string name="profile_view_screen_timeout_always_on">Timeout (always on)</string>
    <string name="profile_view_screen_timeout_always_on_charging">Timeout (charging)</string>
    <string name="profile_view_rotation_autorotate">Orientation (auto-rotate)</string>
    <string name="profile_view_rotation_landscape">Orientation (landscape)</string>
    <string name="profile_view_rotation_portrait">Orientation (portrait)</string>
    <string name="profile_view_ui_refresh_systemui">UI refresh (System UI)</string>
    <string name="profile_view_ui_refresh_systemui_alt">UI refresh (kill apps)</string>
    <string name="profile_view_ui_refresh_soft_reboot">UI refresh (soft reboot)</string>
    <string name="profile_view_ui_refresh_soft_reboot_alt">UI refresh (manual reboot)</string>
    <string name="profile_view_wifi_on">Wi-Fi on</string>
    <string name="profile_view_freeform">Freeform mode</string>
    <string name="profile_view_hdmi_output">HDMI (Portrait)</string>
    <string name="quick_actions_message">Use Quick Actions to access SecondScreen functionality without creating a new profile, or temporarily modify an existing running profile without editing it.</string>
    <string name="recreate_shortcut">Profile not found!\n\nPlease recreate or delete this shortcut.</string>
    <string name="safeguard_title">ATTENTION</string>
    <string name="select_profile">Select profile</string>
    <string name="select_profile_alt">Select a profile</string>
    <string name="select_screen_type">Select screen type:</string>
    <string name="show_list">Show list of profiles</string>
    <string name="this_profile">This profile</string>
    <string name="turning_off_profile">Turning SecondScreen off&#8230;</string>
    <string name="welcome">Welcome to SecondScreen</string>
    <string name="welcome_message">Tap the plus button to create your first profile</string>
    <string name="title_activity_profile_edit">Edit Profile</string>
    <string name="pref_header_display_settings">Display settings</string>
    <string name="pref_header_additional_settings">Additional settings</string>
    <string name="pref_title_profile_name">Profile name</string>
    <string name="pref_title_resolution">Resolution</string>
    <string name="pref_title_dpi">Density</string>
    <string name="pref_title_overscan_settings">Overscan settings</string>
    <string name="pref_title_overscan">Enable overscan</string>
    <string name="pref_description_overscan">Useful for older TVs that crop parts of the image</string>
    <string name="pref_title_bluetooth_on">Turn Bluetooth on</string>
    <string name="pref_description_bluetooth_on">Automatically enable Bluetooth (to connect a keyboard, mouse, and/or game controller)</string>
    <string name="pref_title_wifi_on">Turn Wi-Fi on</string>
    <string name="pref_description_wifi_on">Automatically enable Wi-Fi</string>
    <string name="pref_title_daydreams_on">Turn Daydreams on</string>
    <string name="pref_description_daydreams_on">Show the screensaver when device is locked (wired connections only)</string>
    <string name="pref_title_show_touches">Show touches</string>
    <string name="pref_description_show_touches">Show visual feedback for touchscreen events</string>
    <string name="pref_title_rotation">Screen orientation</string>
    <string name="pref_title_backlight_off">Reduce backlight</string>
    <string name="pref_description_backlight_off">Dim the device\'s backlight as much as possible while a display is connected</string>
    <string name="pref_title_vibration_off">Reduce vibration</string>
    <string name="pref_title_ui_refresh">UI refresh method</string>
    <string name="pref_title_screen_timeout">Screen timeout</string>
    <string name="pref_title_hdmi_rotation">HDMI output orientation</string>
    <string name="pref_title_notification_action_2">Primary action button</string>
    <string name="pref_title_immersive">Status/navigation bars</string>
    <string name="force_backlight_off">Force backlight off</string>
    <string name="force_backlight_off_description">Allow the backlight to turn off without a display connected</string>
    <string name="system_notification_settings">System notification settings</string>
    <string name="pref_title_tasker_enabled">Allow third-party app integration</string>
    <string name="pref_summary_tasker_enabled">Disable for improved security</string>
    <string name="pref_title_notch_compat_mode">Notch compatibility mode</string>
    <string name="pref_summary_notch_compat_mode">Apply a workaround on devices with screen notches to improve display output</string>
</resources>